--- a/case-complexity.tex
+++ b/case-complexity.tex
@@ -4,6 +4,7 @@
 
 \section{The pattern}
 
+
 \ex. \tsc{int:nom}, \tsc{ext:acc}
 \a. \tsc{nom} not attested
 \bg. jah þ-o-ei ist us Laudeikaion jus ussiggwaid\\
@@ -130,52 +131,80 @@ numerals
 \begin{table}[h]
   \center
 	\caption {Transparent case containment in Khanty \citep[16]{nikolaeva1999}}
-	\begin{minipage}{0.4\linewidth}
-		\begin{tabularx}{\textwidth}{c *{3}{Y}}
+	\begin{minipage}{0.7\linewidth}
+		\begin{tabularx}{\textwidth}{c *{3}{Z}}
 		\toprule
-        & \tsc{nom} & \tsc{acc}       & \tsc{dat}         \\
+              & \tsc{1sg}
+              & \tsc{3sg}
+              & \tsc{1pl}                               \\
 		\midrule
-    1sg & ma        & ma\tbf{:-ne:m}  & ma\tbf{:-ne:m}-na \\
-    3sg & luw       & luw\tbf{-e:l}   & luw\tbf{-e:l}-na  \\
-    1pl & muŋ       & muŋ\tbf{-e:w}   & muŋ\tbf{-e:w}-na  \\
+    \tsc{nom} & ma
+              & luw
+              & muŋ                                     \\
+    \tsc{acc} & ma\tbf{:-ne:m}
+              & luw\tbf{-e:l}
+              & muŋ\tbf{-e:w}                           \\
+    \tsc{dat} & ma\tbf{:-ne:m}-\textcolor{DG}{\tbf{na}}
+              & luw\tbf{-e:l}-\textcolor{DG}{\tbf{na}}
+              & muŋ\tbf{-e:w}-\textcolor{DG}{\tbf{na}}  \\
 		\bottomrule
 		\end{tabularx}
 	\end{minipage}
 \end{table}
 
+
+
+
+
 \begin{table}[h]
   \center
 	\caption {Transparent case containment in Kalderaš Romani \citep[31-46]{boretzky1994}}
-	\begin{minipage}{0.6\linewidth}
-		\begin{tabularx}{\textwidth}{c *{3}{Y}}
+	\begin{minipage}{0.9\linewidth}
+		\begin{tabularx}{\textwidth}{c *{4}{Z}}
 		\toprule
-    \tsc{nom} & \tsc{acc}       & \tsc{dat}           &             \\
+              & `brother'
+              & `brothers'
+              & `girl'
+              & `girls'                                   \\
 		\midrule
-    phral     & phral-\tbf{és}  & phral-\tbf{és}-kə   & `brother'   \\
-    phral-(á) & phral-\tbf{én}  & phral-\tbf{én}-gə   & `brothers'  \\
-    rakl-í    & rakl-\tbf{já}   & rakl-\tbf{já}-kə    & `girl'      \\
-    rakl-já   & rakl-já-\tbf{n} & rakl-\tbf{já}-n-gə  & `girls'     \\
+    \tsc{nom} & phral
+              & phral-(á)
+              & rakl-í
+              & rakl-já                                   \\
+    \tsc{acc} & phral-\tbf{és}
+              & phral-\tbf{én}
+              & rakl-\tbf{já}
+              & rakl-já-\tbf{n}                           \\
+    \tsc{dat} & phral-\tbf{és}-\textcolor{DG}{\tbf{kə}}
+              & phral-\tbf{én}-\textcolor{DG}{\tbf{gə}}
+              & rakl-\tbf{já}-\textcolor{DG}{\tbf{kə}}
+              & rakl-já-\tbf{n}-\textcolor{DG}{\tbf{gə}}  \\
 		\bottomrule
 		\end{tabularx}
 	\end{minipage}
 \end{table}
+
 
 
 \begin{table}[h]
   \center
 	\caption {Transparent case containment in West Tocharian \citep[23-24]{gippert1987}}
-	\begin{minipage}{0.4\linewidth}
-		\begin{tabularx}{\textwidth}{c *{3}{Y}}
+	\begin{minipage}{0.7\linewidth}
+		\begin{tabularx}{\textwidth}{c *{4}{Z}}
 		\toprule
-    \tsc{nom} & \tsc{acc}      & \tsc{dat}          &          \\
+              & `horses'
+              & `men'                                  \\
 		\midrule
-    yakwi     & yakwe-\tbf{ṃ}  & yäkwe-\tbf{ṃ}-ts   & `horses' \\
-    eṅkwi     & eṅkwe-\tbf{ṃ}  & eṅkwe-\tbf{ṃ}-ts   & `men'    \\
+    \tsc{nom} & yakwi
+              & eṅkwi                                  \\
+    \tsc{acc} & yakwe-\tbf{ṃ}
+              & eṅkwe-\tbf{ṃ}                          \\
+    \tsc{dat} & yäkwe-\tbf{ṃ}-\textcolor{DG}{\tbf{ts}}
+              & eṅkwe-\tbf{ṃ}-\textcolor{DG}{\tbf{ts}} \\
 		\bottomrule
 		\end{tabularx}
 	\end{minipage}
 \end{table}
-
 
 
 
@@ -184,16 +213,31 @@ numerals
 \subsubsection{ABB}
 
 
-cognates widespread in Indo-European
-Icelandic ég mig mér
+cognates widespread in Indo-European - Icelandic
+cognates across Slavic - Russian
+cognates across Slavic - Serbian
 
-cognates across Slavic
-Russian 1pl my nas nam
+\begin{table}[h]
+  \center
+	\caption {hoi}
+	\begin{minipage}{0.8\linewidth}
+		\begin{tabularx}{\textwidth}{c *{5}{Y}}
+		\toprule
+              & Icelandic & Russian   & Serbian     &              &              \\
+		\midrule
+              & \tsc{1sg} & \tsc{1pl} & \tsc{3sg.f} & \tsc{3sg.m}  & \tsc{3sg.n}  \\
+    \midrule
+    \tsc{nom} & ég        & my        &  ona        & oni          & on           \\
+    \tsc{acc} & \tbf{m}ig & \tbf{n}as & \tbf{nj}u   & \tbf{nji}h   & \tbf{nje}-ga \\
+    \tsc{dat} & \tbf{m}ér & \tbf{n}am & \tbf{nj}oj  & \tbf{nji}ma  & \tbf{nje}-mu \\
+    \bottomrule
+		\end{tabularx}
+	\end{minipage}
+\end{table}
 
-cognates across Slavic
-Serbian 3sg(m) on nje-ga nje-mu
-Serbian 3sg(f) ona nju njoj
-Serbian 3pl(m) oni njih njima
+
+
+
 
 
 \subsubsection{ABC}
@@ -224,30 +268,31 @@ Wardaman 3pl narnaj-bulu narnaj-bulu-yi wurrugu
 
 \subsection{Spellout}
 
-\ex. The Superset Principle \citet{starke2009}: \\
+\ex. \tbf{The Superset Principle} \citet{starke2009}:\\
 A lexically stored tree matches a syntactic node iff the lexically stored tree contains the syntactic node.
 
-\ex. The Elsewhere Condition (\citealt{kiparsky1973}, formulated as in \citealt{caha2020}):\\
+\ex. \tbf{The Elsewhere Condition} (\citealt{kiparsky1973}, formulated as in \citealt{caha2020}):\\
 When two entries can spell out a given node, the more specific entry wins. Under the Superset Principle governed insertion, the more specific entry is the one which has fewer unused features.
 
-\ex. Merge F and \label{ex:spellout}
+\ex. \tbf{Spellout Algorithm:}\\
+Merge F and \label{ex:spellout}
  \a. Spell out FP.
  \b. If (a) fails, attempt movement of the spec of the complement of \tsc{f}, and retry (a).
  \b. If (b) fails, move the complement of \tsc{f}, and retry (a).
 
 When a new match is found, it overrides previous spellouts.
 
-\ex. Cyclic Override \citep{starke2018}:\\
+\ex. \tbf{Cyclic Override} \citep{starke2018}:\\
 Lexicalisation at a node XP overrides any previous match at a phrase contained in XP.
 
 If the spellout procedure in \ref{ex:spellout} fails, backtracking takes place.
 
-\ex. Backtracking \citep{starke2018}:\\
+\ex. \tbf{Backtracking} \citep{starke2018}:\\
 When spellout fails, go back to the previous cycle, and try the next option for that cycle.\label{ex:backtracking}
 
 If backtracking also does not help, a specifier is constructed.
 
-\ex. Spec Formation \citep{starke2018}:\\
+\ex. \tbf{Spec Formation} \citep{starke2018}:\\
 If Merge F has failed to spell out (even after backtracking), try to spawn a new derivation providing the feature F and merge that with the current derivation, projecting the feature F at the top node.\label{ex:specformation}
 
 
