--- a/direction-of-attraction.tex
+++ b/direction-of-attraction.tex
@@ -3,7 +3,7 @@
 \chapter{Direction of attraction}
 
 
-  \section{The typology}
+\section{The typology}
 Old High German only has proper attraction. Modern German only has inverse attraction. Gothic has both proper and inverse attraction.
 
 
@@ -23,6 +23,7 @@ Old High German only has proper attraction. Modern German only has inverse attra
 		\end{tabularx}
 	\end{minipage}
 \end{table}
+
 
 
 \subsection{Gothic}
@@ -72,29 +73,32 @@ Old High German only has proper attraction. Modern German only has inverse attra
 
 \subsection{Old High German}
 
+
 \ex. \tsc{int:nom}, \tsc{ext:acc}
 \a. \tsc{nom} not attested
 \bg. ih bibringu fona Juda dhen mina berga chisetzit\\
- I educate von Juda D-\tsc{m/n/f.pl.dat}/\tsc{m.sg.acc} my? mountain order/put\\
- `' \hfill (Old High German, Isidor 34,3, \citealt[761]{behaghel1923})
+ I educate\scsub{[acc]} about Juda D-\tsc{m.sg.acc} my mountains {through pull}\scsub{[nom]}\\
+ `I educate the one who wanders through my mountains about Judas' \hfill (Old High German, Isidor 34:3, \citealt[761]{behaghel1923})
 
 \ex. \tsc{int:nom}, \tsc{ext:dat}
 \a. \tsc{nom} not attested
 \bg. aer antuurta demo zaimo sprah\\
 he replied\scsub{[dat]} D-\tsc{m.sg.dat} {to him} spoke\scsub{[nom]}\\
-`He replied to the one who spoke to him.' \hfill (Old High German, Monsee Fragments 7,24, \citealt[761]{behaghel1923})
+`he replied to the one who spoke to him' \hfill (Old High German, Monsee Fragments 7:24, \citealt[761]{behaghel1923}, gloss and translation by \citealt[199]{pittner1995})
 \bg. gebe themo ni eigi\\
- give\scsub{[dat]} D--\tsc{m.sg.dat} not posses\scsub{[nom]}\\
- `give to whom that does not have' gebe dem der nicht hat \hfill (Old High German, Otfrid I,24,77, Schrodt,175)
+ give\scsub{[dat]} D-\tsc{m.sg.dat} not posses\scsub{[nom]}\\
+ `give to the one who does not have' \hfill (Old High German, Otfrid I 24:77)\\
+ `gebe dem der nicht hat' \hfill (Schrodt, 175)
 
 \ex. \tsc{int:nom}, \tsc{ext:gen}
 \a. \tsc{nom} not attested
 \bg. suachit thes nan sentit\\
- search.\tsc{3.sg}\scsub{gen?} D-\tsc{n.sg.gen} \tsc{3.sg.m.acc} sent\\
- `he searched for who sent him/ der sucht die Sachen dessen der ihn sendet' \hfill (Old High German, Otfrid III,16,21, \citealt[761]{behaghel1923})
-\bg. diu habe niemer niht entuot, des der seele schaden si\\
+ search.\tsc{3.sg}\scsub{[gen?]} D-\tsc{n.sg.gen} \tsc{3.sg.m.acc} sent\scsub{[nom]}\\
+ `he searches some of that which sent him' \hfill (Old High German, Otfrid III 16:21, \citealt[761]{behaghel1923})
+ `der sucht die Sachen dessen der ihn sendet' \hfill (Schrodt, 175)
+\bg. diu habe niemer niht entuot\scsub{[gen?]}, des der seele schaden si\scsub{[nom]}\\
  they have not never {not do} D-\tsc{gen.sg.n} the soul damage is\scsub{[nom]}\\
- `' \hfill (Middle High German, Warn. 2490, \citealt[761]{behaghel1923})
+ `they have never done anything of that which does damage to the soul' \hfill (Middle High German, Warn. 2490, \citealt[761]{behaghel1923})
 
 \ex. \tsc{int:acc}, \tsc{ext:nom}
 \a. \tsc{acc} not attested
@@ -103,8 +107,8 @@ he replied\scsub{[dat]} D-\tsc{m.sg.dat} {to him} spoke\scsub{[nom]}\\
 \ex. \tsc{int:acc}, \tsc{ext:dat}
 \a. \tsc{acc} not attested
 \bg. istû furira Abrâhame, ouh thên man hiar nû zalta?\\
- {are you} {superior to}\scsub{[dat]} Abraham also D-\tsc{d.pl} one here now mentioned\scsub{[acc]}\\
- `are you bigger than Abraham and those people named just now?' \hfill (Old High German, Otfrid III,18,33, \citealt[761]{behaghel1923})
+ {are you} superior\scsub{[dat]} {to Abraham} also D-\tsc{dat.pl} one here now named\scsub{[acc]}\\
+ `are you superior to Abraham to those which they just mentioned?' \hfill (Old High German, Otfrid III 18:33, \citealt[761]{behaghel1923})
 
 \ex. \tsc{int:acc}, \tsc{ext:gen}
 \a. \tsc{acc} not attested
@@ -113,7 +117,7 @@ he replied\scsub{[dat]} D-\tsc{m.sg.dat} {to him} spoke\scsub{[nom]}\\
  `He directed him to what he sought.' \hfill (Middle High German, Iwein 988, \citealt[761]{behaghel1923}), trans. Hartmann von Aue-Portal
 \bg. giwisso ni birut ir thero ih irwellu zi mir\\
  bestimmt not belong\scsub{[gen]} \tsc{2.pl.nom} D-\tsc{gen.pl} I choose\scsub{[acc]} to me\\
- `you surely do not belong to those that I choose for myself //sicherlich gehört ihr nicht zu denen die ich mir erwähle' \hfill (Old High German, Otfrid III,22,20, Schrodt,p.175)
+ `you surely do not belong to those that I choose for myself //sicherlich gehört ihr nicht zu denen die ich mir erwähle' \hfill (Old High German, Otfrid III 22:20, Schrodt,p.175)
 
 \ex. \tsc{int:dat}, \tsc{ext:nom}
 \a. \tsc{dat} not attested
