--- a/fenna-files/packages.sty
+++ b/fenna-files/packages.sty
@@ -19,6 +19,7 @@ boom/.style={for tree={s sep=10mm, inner sep=0, l=0}}
 \usepackage{diagbox}%diagonals
 \usepackage{tabularx,booktabs}%pretty tables
 \newcolumntype{Y}{>{\centering\arraybackslash}X}
+\newcolumntype{Z}{>{\arraybackslash}X}
 \usepackage{color, colortbl}
 \definecolor{LG}{gray}{0.8}
 \definecolor{DG}{gray}{0.5}
