all genitives gone

--- a/case-complexity.tex
+++ b/case-complexity.tex
@@ -17,10 +17,6 @@
  D-\tsc{pl.dat}-\tsc{comp} above are\scsub{[nom]} {think on}\scsub{[dat]}\\
  `set your mind on those which are above' \hfill (Colossians 3:2, gloss and translation by \citealt[339]{harbert1978})
 
-\ex. \tsc{int:nom}, \tsc{ext:gen}
-\a. \tsc{nom} not attested
-\b. \tsc{gen} not attested
-
 \ex. \tsc{int:acc}, \tsc{ext:nom}
 \ag. þ-an-ei frijos siuks ist\\
  D-\tsc{m.sg.acc}-\tsc{comp} love\scsub{[acc]} sick is\scsub{[nom]}\\
@@ -32,12 +28,6 @@
 \bg. hva nu wileiþ ei taujau þ-amm-ei qiþiþ þiudan Iudaie?\\
  what now want that do\scsub{[dat]} D-\tsc{m.sg.dat}-\tsc{comp} say\scsub{[acc]} king {of Jews}\\
  `what now do you wish that I do to him whom you call King of the Jews?' \hfill (Mark 15:12, gloss and translation by \citealt[339]{harbert1978})
-
-\ex. \tsc{int:acc}, \tsc{ext:gen}, partitive?
-\a. \tsc{acc} not attested
-\bg. ni waiht þ-iz-ei gasehvun\\
- not thing\scsub{[gen]} D-\tsc{n.sg.gen}-\tsc{comp} saw\scsub{[acc]}\\
- `not any of that which they saw' \hfill (Luke 9:36, gloss and translation by \citealt[340]{harbert1978})
 
 \ex. \tsc{int:dat}, \tsc{ext:nom}
 \ag. iþ þ-amm-ei leitil fraletada leitil frijod\\
@@ -51,59 +41,31 @@
  `picking up that on which he lay' \hfill (Luke 5:25, gloss and translation by \citealt[343]{harbert1978})
 \b. \tsc{acc} not attested
 
-\ex. \tsc{int:dat}, \tsc{ext:gen}
-\a. \tsc{dat} not attested
-\b. \tsc{gen} not attested
-
-\ex.  \tsc{int:gen}, \tsc{ext:nom}
-\a. \tsc{gen} not attested
-\b. \tsc{nom} not attested
-
-\ex. \tsc{int:gen}, \tsc{ext:acc}, partitive?
-\ag. bugei þ-iz-ei þaurbeima\\
- buy\scsub{[acc]} D-\tsc{n.sg.gen}-\tsc{comp} need\scsub{[gen]}\\
- `buy that which we need' \hfill (John 13:29, gloss and translation by \citealt[343]{harbert1978})
-\b. \tsc{acc} not attested
-
-\ex. \tsc{int:gen}, \tsc{ext:dat}
-\a. \tsc{gen} not attested
-\b. \tsc{dat} not attested
-
 \begin{table}[h]
   \center
   \caption {Case attraction in headless relatives in Gothic}
-    \begin{minipage}{\linewidth}
-      \begin{tabularx}{\textwidth}{c|Y|Y|Y|Y}
+    \begin{minipage}{0.8\linewidth}
+      \begin{tabularx}{\textwidth}{c|Y|Y|Y}
         \toprule
           \diagbox[linecolor=white]{\tsc{int}}{\tsc{ext}}
               & \tsc{[nom]}
               & \tsc{[acc]}
               & \tsc{[dat]}
-              & \tsc{[gen]}
-              \\ \cmidrule(lr){1-5}
+              \\ \cmidrule(lr){1-4}
           \tsc{[nom]}
               & \colorbox{LG}{\tsc{nom}}
               & \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{acc}}}
               & \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{dat}}}
-              & \diagbox[linecolor=white]{?\tsc{nom}}{?\tsc{gen}}
-              \\ \cmidrule(lr){1-5}
+              \\ \cmidrule(lr){1-4}
           \tsc{[acc]}
               & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{acc}}}{?\tsc{nom}}
               &	\colorbox{LG}{\tsc{acc}}
               &	\diagbox[linecolor=white]{?\tsc{acc}}{\colorbox{DG}{\tsc{dat}}}
-              &	\diagbox[linecolor=white]{?\tsc{acc}}{\colorbox{DG}{\tsc{gen}}}
-              \\ \cmidrule(lr){1-5}
+              \\ \cmidrule(lr){1-4}
           \tsc{[dat]}
               & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{?\tsc{nom}}
               &	\diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{?\tsc{acc}}
               & \colorbox{LG}{\tsc{dat}}
-              & \diagbox[linecolor=white]{?\tsc{dat}}{?\tsc{gen}}
-              \\ \cmidrule(lr){1-5}
-          \tsc{[gen]}
-              & \diagbox[linecolor=white]{?\tsc{gen}}{?\tsc{nom}}
-              & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{gen}}}{?\tsc{acc}}
-              & \diagbox[linecolor=white]{?\tsc{gen}}{?\tsc{dat}}
-              & \colorbox{LG}{\tsc{gen}}
               \\
         \bottomrule
       \end{tabularx}
@@ -112,19 +74,18 @@
 
 \ex. \tsc{nom} < \tsc{acc} < \tsc{dat}
 
-reasons to leave out genitive
-
-\begin{itemize}
-  \item Gothic: it is not verbs that select for genitive, but
-\end{itemize}
 
 
-\section{Another instance of case competition}
+\section{Accessibility hierarchy}
 
-numerals
+\ex. \tsc{nom} < \tsc{acc} < \tsc{dat}
 
 
-\section{Case containment}
+
+
+
+
+\section{Morphology}
 
 \subsection{Morphological containment}
 
@@ -151,8 +112,6 @@ numerals
 		\end{tabularx}
 	\end{minipage}
 \end{table}
-
-
 
 
 
@@ -185,11 +144,10 @@ numerals
 \end{table}
 
 
-
 \begin{table}[h]
   \center
 	\caption {Transparent case containment in West Tocharian \citep[23-24]{gippert1987}}
-	\begin{minipage}{0.7\linewidth}
+	\begin{minipage}{0.6\linewidth}
 		\begin{tabularx}{\textwidth}{c *{4}{Z}}
 		\toprule
               & `horses'
@@ -206,24 +164,28 @@ numerals
 	\end{minipage}
 \end{table}
 
+\ex. \tsc{nom} < \tsc{acc} < \tsc{dat}
 
 
 \subsection{Suppletion}
 
+\ex. \tsc{nom} < \tsc{acc} < \tsc{dat}
+
+
 \subsubsection{ABB}
 
 
-cognates widespread in Indo-European - Icelandic
-cognates across Slavic - Russian
+cognates widespread in Indo-European - Icelandic\\
+cognates across Slavic - Russian\\
 cognates across Slavic - Serbian
 
 \begin{table}[h]
   \center
-	\caption {hoi}
+	\caption {ABB patterns in suppletion}
 	\begin{minipage}{0.8\linewidth}
 		\begin{tabularx}{\textwidth}{c *{5}{Y}}
 		\toprule
-              & Icelandic & Russian   & Serbian     &              &              \\
+              & Icelandic & Russian   & \multicolumn{3}{Serbian}                  \\
 		\midrule
               & \tsc{1sg} & \tsc{1pl} & \tsc{3sg.f} & \tsc{3sg.m}  & \tsc{3sg.n}  \\
     \midrule
@@ -237,73 +199,82 @@ cognates across Slavic - Serbian
 
 
 
-
-
-
 \subsubsection{ABC}
 
-Indo-European:
-Albanian 3sg.f ajo (a)të asaj 95
-Nakh-Dagestanian:
-Khinalugh 1sg zɨ jä as(ɨr)
+\begin{table}[h]
+  \center
+	\caption {ABB patterns in suppletion}
+	\begin{minipage}{0.4\linewidth}
+		\begin{tabularx}{\textwidth}{c *{2}{Y}}
+		\toprule
+              & Albanian    & Khinalugh   \\
+		\midrule
+              & \tsc{3sg.f} & \tsc{1sg}   \\
+    \midrule
+    \tsc{nom} & ajo          & zɨ         \\
+    \tsc{acc} & (a)të        & jä         \\
+    \tsc{dat} & asaj         & as(ɨr)     \\
+    \bottomrule
+		\end{tabularx}
+	\end{minipage}
+\end{table}
+
 
 
 \subsubsection{AAB}
 
-Algic:
-Yurok 3sg yoɂ, woɂ, yoɂo·t, woɂo·t yoɂo·t, woɂo·t weyaɂik
 
-Australian:
-Wardaman 3sg narnaj narnaj-(j)i gunga
-Wardaman 3pl narnaj-bulu narnaj-bulu-yi wurrugu
+\begin{table}[h]
+  \center
+	\caption {ABB patterns in suppletion}
+	\begin{minipage}{0.8\linewidth}
+		\begin{tabularx}{\textwidth}{c *{3}{Y}}
+		\toprule
+              & Yurok                     & \multicolumn{2}{Wardaman}    \\
+	%	          \cmidrule(lr){1-2}            \cmidrule(lr){3-4}
+              & \tsc{3sg}                 & \tsc{3sg}   & \tsc{3pl}      \\
+    \midrule
+    \tsc{nom} & yoɂ, woɂ, yoɂo·t, woɂo·t  & narnaj      & narnaj-bulu    \\
+    \tsc{acc} & yoɂo·t, woɂo·t            & narnaj-(j)i & narnaj-bulu-yi \\
+    \tsc{dat} & weyaɂik                   & gunga       & wurrugu        \\
+    \bottomrule
+		\end{tabularx}
+	\end{minipage}
+\end{table}
+
+
+
+
 
 \subsection{Syncretism}
 
-
-
-
-\section{Nanosyntax}
-
-\subsection{Basics}
-
-\subsection{Spellout}
-
-\ex. \tbf{The Superset Principle} \citet{starke2009}:\\
-A lexically stored tree matches a syntactic node iff the lexically stored tree contains the syntactic node.
-
-\ex. \tbf{The Elsewhere Condition} (\citealt{kiparsky1973}, formulated as in \citealt{caha2020}):\\
-When two entries can spell out a given node, the more specific entry wins. Under the Superset Principle governed insertion, the more specific entry is the one which has fewer unused features.
-
-\ex. \tbf{Spellout Algorithm:}\\
-Merge F and \label{ex:spellout}
- \a. Spell out FP.
- \b. If (a) fails, attempt movement of the spec of the complement of \tsc{f}, and retry (a).
- \b. If (b) fails, move the complement of \tsc{f}, and retry (a).
-
-When a new match is found, it overrides previous spellouts.
-
-\ex. \tbf{Cyclic Override} \citep{starke2018}:\\
-Lexicalisation at a node XP overrides any previous match at a phrase contained in XP.
-
-If the spellout procedure in \ref{ex:spellout} fails, backtracking takes place.
-
-\ex. \tbf{Backtracking} \citep{starke2018}:\\
-When spellout fails, go back to the previous cycle, and try the next option for that cycle.\label{ex:backtracking}
-
-If backtracking also does not help, a specifier is constructed.
-
-\ex. \tbf{Spec Formation} \citep{starke2018}:\\
-If Merge F has failed to spell out (even after backtracking), try to spawn a new derivation providing the feature F and merge that with the current derivation, projecting the feature F at the top node.\label{ex:specformation}
-
-
-
-\section{Analysis}
-
-No syntax of relative clauses yet, just "when one contains the other, the contained one can be deleted"
+\subsubsection{ABB}
+\subsubsection{ABC}
+\subsubsection{AAB}
 
 
 
 
-\section{Bigger picture}
+\ex. \tsc{nom} < \tsc{acc} < \tsc{dat}
 
-Case is complex
+
+
+\section{Case complexity in syntax}
+
+\ex.
+\begin{forest} boom
+  [\tsc{datP}
+      [\tsc{dat}]
+      [\tsc{accP}
+          [\tsc{acc}]
+          [\tsc{nomP}
+              [\tsc{nom}]
+              [..,roof]
+          ]
+      ]
+  ]
+\end{forest}
+
+Explain how all phenomena relate to this.
+
+\phantom{hi}
