--- a/direction-of-attraction.tex
+++ b/direction-of-attraction.tex
@@ -32,37 +32,27 @@ Old High German only has proper attraction. Modern German only has inverse attra
   \center
   \caption {Case attraction in headless relatives in Gothic}
     \begin{minipage}{\linewidth}
-      \begin{tabularx}{\textwidth}{c|Y|Y|Y|Y}
+      \begin{tabularx}{\textwidth}{c|Y|Y|Y}
         \toprule
           \diagbox[linecolor=white]{\tsc{int}}{\tsc{ext}}
               & \tsc{[nom]}
               & \tsc{[acc]}
               & \tsc{[dat]}
-              & \tsc{[gen]}
-              \\ \cmidrule(lr){1-5}
+              \\ \cmidrule(lr){1-4}
           \tsc{[nom]}
               & \colorbox{LG}{\tsc{nom}}
               & \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{acc}}}
               & \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{dat}}}
-              & \diagbox[linecolor=white]{?\tsc{nom}}{?\tsc{gen}}
-              \\ \cmidrule(lr){1-5}
+              \\ \cmidrule(lr){1-4}
           \tsc{[acc]}
               & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{acc}}}{?\tsc{nom}}
               &	\colorbox{LG}{\tsc{acc}}
               &	\diagbox[linecolor=white]{?\tsc{acc}}{\colorbox{DG}{\tsc{dat}}}
-              &	\diagbox[linecolor=white]{?\tsc{acc}}{\colorbox{DG}{\tsc{gen}}}
-              \\ \cmidrule(lr){1-5}
+              \\ \cmidrule(lr){1-4}
           \tsc{[dat]}
               & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{?\tsc{nom}}
               &	\diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{?\tsc{acc}}
               & \colorbox{LG}{\tsc{dat}}
-              & \diagbox[linecolor=white]{?\tsc{dat}}{?\tsc{gen}}
-              \\ \cmidrule(lr){1-5}
-          \tsc{[gen]}
-              & \diagbox[linecolor=white]{?\tsc{gen}}{?\tsc{nom}}
-              & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{gen}}}{?\tsc{acc}}
-              & \diagbox[linecolor=white]{?\tsc{gen}}{?\tsc{dat}}
-              & \colorbox{LG}{\tsc{gen}}
               \\
         \bottomrule
       \end{tabularx}
@@ -90,16 +80,6 @@ he replied\scsub{[dat]} D-\tsc{m.sg.dat} {to him} spoke\scsub{[nom]}\\
  `give to the one who does not have' \hfill (Old High German, Otfrid I 24:77)\\
  `gebe dem der nicht hat' \hfill (Schrodt, 175)
 
-\ex. \tsc{int:nom}, \tsc{ext:gen}
-\a. \tsc{nom} not attested
-\bg. suachit thes nan sentit\\
- search.\tsc{3.sg}\scsub{[gen?]} D-\tsc{n.sg.gen} \tsc{3.sg.m.acc} sent\scsub{[nom]}\\
- `he searches some of that which sent him' \hfill (Old High German, Otfrid III 16:21, \citealt[761]{behaghel1923})
- `der sucht die Sachen dessen der ihn sendet' \hfill (Schrodt, 175)
-\bg. diu habe niemer niht entuot\scsub{[gen?]}, des der seele schaden si\scsub{[nom]}\\
- they have not never {not do} D-\tsc{gen.sg.n} the soul damage is\scsub{[nom]}\\
- `they have never done anything of that which does damage to the soul' \hfill (Middle High German, Warn. 2490, \citealt[761]{behaghel1923})
-
 \ex. \tsc{int:acc}, \tsc{ext:nom}
 \a. \tsc{acc} not attested
 \b. \tsc{nom} not attested
@@ -110,15 +90,6 @@ he replied\scsub{[dat]} D-\tsc{m.sg.dat} {to him} spoke\scsub{[nom]}\\
  {are you} superior\scsub{[dat]} {to Abraham} also D-\tsc{dat.pl} one here now named\scsub{[acc]}\\
  `are you superior to Abraham to those which they just mentioned?' \hfill (Old High German, Otfrid III 18:33, \citealt[761]{behaghel1923})
 
-\ex. \tsc{int:acc}, \tsc{ext:gen}
-\a. \tsc{acc} not attested
-\bg. der bewiset in des er suochte\\
- he directed\scsub{[gen]} him D-\tsc{n.sg.gen} he sought\scsub{[acc]}\\
- `He directed him to what he sought.' \hfill (Middle High German, Iwein 988, \citealt[761]{behaghel1923}), trans. Hartmann von Aue-Portal
-\bg. giwisso ni birut ir thero ih irwellu zi mir\\
- bestimmt not belong\scsub{[gen]} \tsc{2.pl.nom} D-\tsc{gen.pl} I choose\scsub{[acc]} to me\\
- `you surely do not belong to those that I choose for myself //sicherlich gehört ihr nicht zu denen die ich mir erwähle' \hfill (Old High German, Otfrid III 22:20, Schrodt,p.175)
-
 \ex. \tsc{int:dat}, \tsc{ext:nom}
 \a. \tsc{dat} not attested
 \b. \tsc{nom} not attested
@@ -127,21 +98,8 @@ he replied\scsub{[dat]} D-\tsc{m.sg.dat} {to him} spoke\scsub{[nom]}\\
 \a. \tsc{dat} not attested
 \b. \tsc{acc} not attested
 
-\ex. \tsc{int:dat}, \tsc{ext:gen}
-\a. \tsc{dat} not attested
-\b. \tsc{gen} not attested
 
-\ex. \tsc{int:gen}, \tsc{ext:nom}
-\a. \tsc{gen} not attested
-\b. \tsc{nom} not attested
 
-\ex. \tsc{int:gen}, \tsc{ext:acc}
-\a. \tsc{gen} not attested
-\b. \tsc{acc} not attested
-
-\ex. \tsc{int:gen}, \tsc{ext:dat}
-\a. \tsc{gen} not attested
-\b. \tsc{dat} not attested
 
 
 Don't know:
@@ -173,37 +131,27 @@ So, to sum up:
   \center
   \caption {Case attraction in headless relatives in Old High German}
     \begin{minipage}{\linewidth}
-      \begin{tabularx}{\textwidth}{c|Y|Y|Y|Y}
+      \begin{tabularx}{\textwidth}{c|Y|Y|Y}
         \toprule
           \diagbox[linecolor=white]{\tsc{int}}{\tsc{ext}}
               & \tsc{[nom]}
               & \tsc{[acc]}
               & \tsc{[dat]}
-              & \tsc{[gen]}
-              \\ \cmidrule(lr){1-5}
+              \\ \cmidrule(lr){1-4}
           \tsc{[nom]}
               & \colorbox{LG}{\tsc{nom}}
               & \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{acc}}}
               & \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{dat}}}
-              & \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{gen}}}
-              \\ \cmidrule(lr){1-5}
+              \\ \cmidrule(lr){1-4}
           \tsc{[acc]}
               & \diagbox[linecolor=white]{?\tsc{acc}}{?\tsc{nom}}
               &	\colorbox{LG}{\tsc{acc}}
               &	\diagbox[linecolor=white]{?\tsc{acc}}{\colorbox{DG}{\tsc{dat}}}
-              &	\diagbox[linecolor=white]{?\tsc{acc}}{\colorbox{DG}{\tsc{gen}}}
-              \\ \cmidrule(lr){1-5}
+              \\ \cmidrule(lr){1-4}
           \tsc{[dat]}
               & \diagbox[linecolor=white]{?\tsc{dat}}{?\tsc{nom}}
               &	\diagbox[linecolor=white]{?\tsc{dat}}{?\tsc{acc}}
               & \colorbox{LG}{\tsc{dat}}
-              & \diagbox[linecolor=white]{?\tsc{dat}}{?\tsc{gen}}
-              \\ \cmidrule(lr){1-5}
-          \tsc{[gen]}
-              & \diagbox[linecolor=white]{?\tsc{gen}}{?\tsc{nom}}
-              & \diagbox[linecolor=white]{?\tsc{gen}}{?\tsc{acc}}
-              & \diagbox[linecolor=white]{?\tsc{gen}}{?\tsc{dat}}
-              & \colorbox{LG}{\tsc{gen}}
               \\
         \bottomrule
       \end{tabularx}
@@ -230,14 +178,6 @@ So, to sum up:
  I trust\scsub{[dat]} W-\tsc{m/f.sg.dat} Hitchcock likes\scsub{[nom]}\\
  `I trust who likes Hitchcock.' \hfill \citep[345]{vogel2001}
 
-\ex. \tsc{int:nom}, \tsc{ext:gen}
-\ag. *Bodo entledigt sich, w-er immer andere Ansichten hat als er.\\
- Bodo rids\scsub{[gen]} self W-\tsc{m/f.sg.nom} ever other opinions has\scsub{[nom]} than he\\
- `Bodo gets rid of whoever has different opinions than he.' \hfill \citep[345]{vogel2001}
-\bg. *Bodo entledigt sich, w-essen immer andere Ansichten hat als er.\\
- Bodo rids\scsub{[gen]} self  W-\tsc{m/f.sg.gen} ever other opinions has\scsub{[nom]} than he\\
- `Bodo gets rid of whoever has different opinions than he.' \hfill \citep[345]{vogel2001}
-
 \ex. \tsc{int:acc}, \tsc{ext:nom}
 \ag. Uns besucht w-en Maria mag.\\
  Us visits\scsub{[nom]} W-\tsc{m/f.sg.acc} Maria.\tsc{nom} likes\scsub{[acc]}\\
@@ -253,14 +193,6 @@ So, to sum up:
 \bg. *Ich vertraue w-en auch Maria mag. \\
  I trust\scsub{[dat]} W-\tsc{m/f.sg.acc} also Maria likes\scsub{[acc]}.\\
  `I trust whoever Maria also likes.' \hfill \citep[345]{vogel2001}
-
-\ex. \tsc{int:acc}, \tsc{ext:gen}
-\ag. *Bodo entledigt sich, w-en immer Henkel nicht mag.\\
- Bodo rids\scsub{[gen]} self W-\tsc{m/f.sg.acc} ever Henkel not likes\scsub{[acc]}\\
- `Bodo gets rid of whoever Henkel does not like.' \hfill \citep[344]{vogel2001}
-\bg. *Bodo entledigt sich, w-essen immer Henkel nicht mag.\\
- Bodo rids\scsub{[gen]} self  W-\tsc{m/f.sg.gen} ever Henkel not likes\scsub{[acc]}\\
- `Bodo gets rid of whoever Henkel does not like.' \hfill \citep[344]{vogel2001}
 
 \ex. \tsc{int:dat}, \tsc{ext:nom}
 \ag. Uns besucht w-em Maria vertraut.\\
@@ -278,77 +210,33 @@ So, to sum up:
  I invite\scsub{[acc]} W-\tsc{m/f.sg.acc} also Maria trusts\scsub{[dat]}.\\
  `I invite whoever Maria also trusts.' \hfill \citep[344]{vogel2001}
 
-\ex. \tsc{int:dat}, \tsc{ext:gen}
-\ag. *Maria hilft, w-essen andere sich entledigen möchten.\\
- Maria helps\scsub{[dat]} W-\tsc{m/f.sg.gen} others self rid\scsub{[gen]} want\\
- `Maria helps whoever others want to get rid of.' \hfill \citep[344]{vogel2001}
-\bg. *Maria hilft, w-em andere sich entledigen möchten.\\
- Maria helps\scsub{[dat]} W-\tsc{m/f.sg.dat} others self rid\scsub{[gen]} want\\
- `Maria helps whoever others want to get rid of.' \hfill \citep[344]{vogel2001}
-
-\ex. \tsc{int:gen}, \tsc{ext:nom}
-\ag. Uns besucht w-essen Maria sich erfreuen würde.\\
- us visits\scsub{[nom]} W-\tsc{m/f.sg.gen} Maria self {be happy}\scsub{[gen]} would\\
- `Who visits us, Maria would be happy about' \hfill \citep[343]{vogel2001}
-\bg. *Uns besucht w-er Maria sich erfreuen würde.\\
- us visits\scsub{[nom]} W-\tsc{m/f.sg.nom} Maria self {be happy}\scsub{[gen]} would\\
- `Who visits us, Maria would be happy about' \hfill \citep[343]{vogel2001}
-
-\ex. \tsc{int:gen}, \tsc{ext:acc}
-\ag. Ich {lade ein}, w-essen sich auch Maria erfreuen würde.\\
- I invite\scsub{[acc]} W-\tsc{m/f.sg.gen} self also Maria {be happy}\scsub{[gen]} would.\\
- `I invite whoever also Maria would be happy to meet.' \hfill \citep[344]{vogel2001}
-\bg. *Ich {lade ein}, w-en sich auch Maria erfreuen würde.\\
- I invite\scsub{[acc]} W-\tsc{m/f.sg.acc} self also Maria {be happy}\scsub{[gen]} would.\\
- `I invite whoever also Maria would be happy to meet.' \hfill \citep[344]{vogel2001}
-
-\ex. \tsc{int:gen}, \tsc{ext:dat}
-\ag. *Bodo entledigt sich, w-em immer Gerhard misstraut.\\
- Bodo rids\scsub{[gen]} self W-\tsc{m/f.sg.dat} ever Gerhard mistrusts\scsub{[dat]}\\
- `Bodo gets rid of whoever Gerhard mistrusts.' \hfill \citep[345]{vogel2001}
-\bg. *Bodo entledigt sich, w-essen immer Gerhard misstraut.\\
- Bodo rids\scsub{[gen]} self W-\tsc{m/f.sg.gen} ever Gerhard mistrusts\scsub{[dat]}\\
- `Bodo gets rid of whoever Gerhard mistrusts.' \hfill \citep[345]{vogel2001}
-
-
-
 \subsubsection{Summary of the data}
 
 \begin{table}[h]
   \center
   \caption {Case attraction in headless relatives in Modern German}
     \begin{minipage}{\linewidth}
-      \begin{tabularx}{\textwidth}{c|Y|Y|Y|Y}
+      \begin{tabularx}{\textwidth}{c|Y|Y|Y}
         \toprule
           \diagbox[linecolor=white]{\tsc{int}}{\tsc{ext}}
               & \tsc{[nom]}
               & \tsc{[acc]}
               & \tsc{[dat]}
-              & \tsc{[gen]}
-              \\ \cmidrule(lr){1-5}
+              \\ \cmidrule(lr){1-4}
           \tsc{[nom]}
               & \colorbox{LG}{\tsc{nom}}
               & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{acc}}
               & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{dat}}
-              & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{gen}}
-              \\ \cmidrule(lr){1-5}
+              \\ \cmidrule(lr){1-4}
           \tsc{[acc]}
               & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{acc}}}{*\tsc{nom}}
               &	\colorbox{LG}{\tsc{acc}}
               &	\diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{dat}}
-              &	\diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{gen}}
-              \\ \cmidrule(lr){1-5}
+              \\ \cmidrule(lr){1-4}
           \tsc{[dat]}
               & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{*\tsc{nom}}
               &	\diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{*\tsc{acc}}
               & \colorbox{LG}{\tsc{dat}}
-              & \diagbox[linecolor=white]{*\tsc{dat}}{*\tsc{gen}}
-              \\ \cmidrule(lr){1-5}
-          \tsc{[gen]}
-              & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{gen}}}{*\tsc{nom}}
-              & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{gen}}}{*\tsc{acc}}
-              & \diagbox[linecolor=white]{\tsc{gen}}{*\tsc{dat}}
-              & \colorbox{LG}{\tsc{gen}}
               \\
         \bottomrule
       \end{tabularx}
@@ -380,7 +268,6 @@ Old High German has a d-pronoun. Modern German has a wh-pronoun. Gothic has a d-
 		\tsc{nom} & d-iu             & d-ër       	     & d-aȥ				\\
 		\tsc{acc}	& d-ea/-ia/(-ie)   & d-ën				       & d-aȥ		    \\
 		\tsc{dat}	& d-ëru/-ëro	     & d-ëmu/-ëmo	       & d-ëmu/-ëmo \\
-    \tsc{gen} & d-ëra/-ëru/-ëro  & d-ës              & d-ës       \\
 		\bottomrule
     \toprule
     \tsc{pl}	& \tsc{f}          & \tsc{m}           & \tsc{n}    \\
@@ -388,7 +275,6 @@ Old High German has a d-pronoun. Modern German has a wh-pronoun. Gothic has a d-
     \tsc{nom} & d-eo/-io         &  d-ē/-ea/-ia/-ie  & d-iu/-ei   \\
     \tsc{acc} & d-eo/-io         &  d-ē/-ea/-ia/-ie  & d-iu/-ei   \\
     \tsc{dat} & d-ēm/-ēn         &  d-ēm/-ēn         & d-ēm/-ēn   \\
-    \tsc{gen} & d-ëro            &  d-ëro            & d-ëro      \\
     \bottomrule
 		\end{tabularx}
 	\end{minipage}
@@ -408,7 +294,6 @@ Old High German has a d-pronoun. Modern German has a wh-pronoun. Gothic has a d-
     \tsc{nom} & s-ō-ei 	  & s-a-ei 		& þ-at-ei	 \\
     \tsc{acc} & þ-ō-ei    & þ-an-ei  	& þ-at-ei  \\
     \tsc{dat} & þ-izái-ei & þ-amm-ei	& þ-amm-ei \\
-    \tsc{gen} & þ-izōz-ei & þ-iz-ei		& þ-iz-ei  \\
 		\bottomrule
     \toprule
     \tsc{pl}	& \tsc{f} 	& \tsc{m}		& \tsc{n}		\\
@@ -416,7 +301,6 @@ Old High German has a d-pronoun. Modern German has a wh-pronoun. Gothic has a d-
     \tsc{nom} &	þ-ōz-ei		&	þ-ái-ei		& þ-ō-ei   	\\
     \tsc{acc} &	þ-ōz-ei		&	þ-anz-ei	& þ-ō-ei   	\\
     \tsc{dat} &	þ-áim-ei	&	þ-áim-ei 	& þ-áim-ei	\\
-    \tsc{gen} &	þ-izō-ei	&	þ-izē-ei	& þ-izē-ei 	\\
     \bottomrule
 		\end{tabularx}
 	\end{minipage}
@@ -436,7 +320,6 @@ Old High German has a d-pronoun. Modern German has a wh-pronoun. Gothic has a d-
     \tsc{nom}  & w-er   	& w-as     \\
     \tsc{acc}  & w-en   	& w-as     \\
     \tsc{dat}  & w-em   	&  		     \\
-    \tsc{gen}  & w-essen	& 		     \\
 		\bottomrule
 		\end{tabularx}
 	\end{minipage}
