--- a/fenna-files/packages.sty
+++ b/fenna-files/packages.sty
@@ -2,12 +2,11 @@
 \usepackage{libertine}%font supporting unicode
 \usepackage[normalem]{ulem}%strikethrough
 
-%%%sections%%%
-% \usepackage{titlesec}%add another level under section
-% \titleformat{\paragraph}
-% {\normalfont\normalsize\bfseries}{\theparagraph}{1em}{}
-% \titlespacing*{\paragraph}
-% {0pt}{3.25ex plus 1ex minus .2ex}{1.5ex plus .2ex}
+\OnehalfSpacing
+
+%%%depth up to subsections also in toc%%%
+\setcounter{secnumdepth}{4}
+\setcounter{tocdepth}{2}
 
 %%%trees%%%
 \usepackage[linguistics]{forest}
