--- a/thesis.tex
+++ b/thesis.tex
@@ -20,6 +20,7 @@
 \include{introduction}
 
 \include{case-complexity}
+\include{ellipsis}
 \include{direction-of-attraction}
 \include{prepositions}
 
