stoeien met tabellen

--- a/case-complexity.tex
+++ b/case-complexity.tex
@@ -74,13 +74,15 @@
 
 \ex. \tsc{nom} < \tsc{acc} < \tsc{dat}
 
+\phantom{x}
+
 
 
 \section{Accessibility hierarchy}
 
 \ex. \tsc{nom} < \tsc{acc} < \tsc{dat}
 
-
+\phantom{x}
 
 
 
@@ -166,11 +168,13 @@
 
 \ex. \tsc{nom} < \tsc{acc} < \tsc{dat}
 
+\phantom{x}
 
 \subsection{Suppletion}
 
 \ex. \tsc{nom} < \tsc{acc} < \tsc{dat}
 
+\phantom{x}
 
 \subsubsection{ABB}
 
@@ -179,23 +183,23 @@ cognates widespread in Indo-European - Icelandic\\
 cognates across Slavic - Russian\\
 cognates across Slavic - Serbian
 
-\begin{table}[h]
-  \center
-	\caption {ABB patterns in suppletion}
-	\begin{minipage}{0.8\linewidth}
-		\begin{tabularx}{\textwidth}{c *{5}{Y}}
-		\toprule
-              & Icelandic & Russian   & \multicolumn{3}{Serbian}                  \\
-		\midrule
-              & \tsc{1sg} & \tsc{1pl} & \tsc{3sg.f} & \tsc{3sg.m}  & \tsc{3sg.n}  \\
-    \midrule
-    \tsc{nom} & ég        & my        &  ona        & oni          & on           \\
-    \tsc{acc} & \tbf{m}ig & \tbf{n}as & \tbf{nj}u   & \tbf{nji}h   & \tbf{nje}-ga \\
-    \tsc{dat} & \tbf{m}ér & \tbf{n}am & \tbf{nj}oj  & \tbf{nji}ma  & \tbf{nje}-mu \\
-    \bottomrule
-		\end{tabularx}
-	\end{minipage}
-\end{table}
+% \begin{table}[h]
+%   \center
+% 	\caption {ABB patterns in suppletion}
+% 	\begin{minipage}{0.8\linewidth}
+% 		\begin{tabularx}{\textwidth}{c *{5}{Y}}
+% 		\toprule
+%               & Icelandic & Russian   & \multicolumn{3}{l}{Serbian}               \\
+% 		\midrule
+%               & \tsc{1sg} & \tsc{1pl} & \tsc{3sg.f} & \tsc{3sg.m}  & \tsc{3sg.n}  \\
+%     \midrule
+%     \tsc{nom} & ég        & my        &  ona        & oni          & on           \\
+%     \tsc{acc} & \tbf{m}ig & \tbf{n}as & \tbf{nj}u   & \tbf{nji}h   & \tbf{nje}-ga \\
+%     \tsc{dat} & \tbf{m}ér & \tbf{n}am & \tbf{nj}oj  & \tbf{nji}ma  & \tbf{nje}-mu \\
+%     \bottomrule
+% 		\end{tabularx}
+% 	\end{minipage}
+% \end{table}
 
 
 
@@ -224,24 +228,24 @@ cognates across Slavic - Serbian
 \subsubsection{AAB}
 
 
-\begin{table}[h]
-  \center
-	\caption {ABB patterns in suppletion}
-	\begin{minipage}{0.8\linewidth}
-		\begin{tabularx}{\textwidth}{c *{3}{Y}}
-		\toprule
-              & Yurok                     & \multicolumn{2}{Wardaman}    \\
-	%	          \cmidrule(lr){1-2}            \cmidrule(lr){3-4}
-              & \tsc{3sg}                 & \tsc{3sg}   & \tsc{3pl}      \\
-    \midrule
-    \tsc{nom} & yoɂ, woɂ, yoɂo·t, woɂo·t  & narnaj      & narnaj-bulu    \\
-    \tsc{acc} & yoɂo·t, woɂo·t            & narnaj-(j)i & narnaj-bulu-yi \\
-    \tsc{dat} & weyaɂik                   & gunga       & wurrugu        \\
-    \bottomrule
-		\end{tabularx}
-	\end{minipage}
-\end{table}
-
+% \begin{table}[h]
+%   \center
+% 	\caption {ABB patterns in suppletion}
+% 	\begin{minipage}{0.8\linewidth}
+% 		\begin{tabularx}{\textwidth}{c *{3}{Y}}
+% 		\toprule
+%               & Yurok               & \multicolumn{2}{c}{Wardaman} \\
+% 	  \midrule
+%               & \tsc{3sg}           & \tsc{3sg}   & \tsc{3pl}      \\
+%     \midrule
+%     \tsc{nom} & yoɂ(o·t), woɂ(o·t)  & narnaj      & narnaj-bulu    \\
+%     \tsc{acc} & yoɂo·t, woɂo·t      & narnaj-(j)i & narnaj-bulu-yi \\
+%     \tsc{dat} & weyaɂik             & gunga       & wurrugu        \\
+%     \bottomrule
+% 		\end{tabularx}
+% 	\end{minipage}
+% \end{table}
+%
 
 
 
